<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>by.rekuts.travelagency</groupId>
  <artifactId>travel-agency</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>travel-agency</name>

  <description>
    Project of Travel Agency application. Technologies are used: Spring, JPA, Postgres, Jenkins, JUnit and Mokito.
    Current technology stack:
    •	Build tool: Maven (multi-module project).
    •	Servlet container: Apache Tomcat (use tomcat-maven-plugin for deploy/redeploy features).
    •	Front-end library and styles: EPAM UUI (https://uui.epam.com/).
    •	Web framework: Spring MVC (version 4.x).
    •	Security framework: Spring Security (version 4.x).
    •	Template Engine: Apache FreeMarker.
  </description>

  <properties>
    <maven.compiler.source>10</maven.compiler.source>
    <maven.compiler.target>10</maven.compiler.target>
    <maven.site.version>3.7.1</maven.site.version>
    <maven.project.info.reports.version>2.9</maven.project.info.reports.version>
    <junit4.version>4.12</junit4.version>
    <mockito.version>1.9.5</mockito.version>
    <xml.bind.jaxb.version>2.3.0</xml.bind.jaxb.version>
    <javax.activation.version>1.1.1</javax.activation.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-site-plugin</artifactId>
      <version>${maven.site.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit4.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>${xml.bind.jaxb.version}</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-core</artifactId>
      <version>${xml.bind.jaxb.version}</version>
    </dependency>
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>${xml.bind.jaxb.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.activation</groupId>
      <artifactId>activation</artifactId>
      <version>${javax.activation.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>${maven.project.info.reports.version}</version>
      </plugin>
    </plugins>
  </build>

  <modules>
    <module>view</module>
    <module>domain</module>
    <module>repository</module>
    <module>service</module>
  </modules>
</project>